# beyond-meanings-turborepo

./: .gitignore  README.md  package.json  pnpm-lock.yaml  prompt.md
apps/agent/: env.example  pyproject.toml
apps/agent/src/: agent.py  main.py
apps/agent/src/tools/: __init__.py  dictionary.py  igdb.py  search.py  tmbd.py  wikipedia.py
apps/api/: .env.example  package.json
apps/api/src/: app.controller.ts  app.module.ts  main.ts
apps/api/src/api-key/: api-key.controller.ts  api-key.dto.ts  api-key.entity.ts  api-key.guard.ts  api-key.module.ts  api-key.service.ts
apps/api/src/billing/: billing.config.ts  billing.controller.ts  billing.entity.ts  billing.module.ts  billing.service.ts  credit.guard.ts
apps/api/src/email/: email.dto.ts  email.module.ts  email.service.ts
apps/api/src/jwt/: jwt-auth.module.ts  jwt-auth.service.ts  jwt-auth.strategy.ts
apps/api/src/research/: research.controller.ts  research.dto.ts  research.entity.ts  research.module.ts  research.service.ts
apps/api/src/user/: user.dto.ts  (+5 more)
apps/extension/: INSTALL.md  background.js  content.js  floating-popup.css  manifest.json  package.json  popup.css  popup.html  popup.js
apps/extension/src/: background.d.ts.map  content.d.ts.map
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ErrorBoundary.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowTo.tsx  LinkNavigate.tsx  Loading.tsx  Pricing.tsx  Problems.tsx  ProtectedRoute.tsx  logo.tsx
apps/web/lib/: api.ts  auth-context.tsx  billing-plans.ts  contant.ts
apps/web/styles/: hero.css
(+16 files in other folders)
